--- a/packages/content-plugin/package.json
+++ b/packages/content-plugin/package.json
@@ -1,5 +1,6 @@
 {
   "name": "content-plugin",
   "version": "0.0.1",
-  "main": "./src/index.js"
+  "main": "./src/index.js",
+  "type": "commonjs"
 }
