--- a/packages/vite-plugin-nitro/project.json
+++ b/packages/vite-plugin-nitro/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/vite-plugin-nitro/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
@@ -50,6 +51,5 @@
         "reportsDirectory": "../../coverage/packages/vite-plugin-nitro"
       }
     }
-  },
-  "tags": []
+  }
 }
