--- a/packages/content/project.json
+++ b/packages/content/project.json
@@ -4,8 +4,18 @@
   "projectType": "library",
   "sourceRoot": "packages/content/src",
   "prefix": "analogjs",
+  "tags": [],
   "targets": {
     "build": {
+      "executor": "nx:run-commands",
+      "outputs": ["{workspaceRoot}/node_modules/@analogjs/content"],
+      "options": {
+        "commands": ["nx build-package content", "nx build content-plugin"],
+        "parallel": false
+      },
+      "dependsOn": ["^build"]
+    },
+    "build-package": {
       "executor": "@angular-devkit/build-angular:ng-packagr",
       "outputs": ["{workspaceRoot}/node_modules/@analogjs/content"],
       "options": {
@@ -36,6 +46,5 @@
         "tagPrefix": "content@"
       }
     }
-  },
-  "tags": []
+  }
 }
