--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -25,15 +25,28 @@
     "@angular/router": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
     "@nx/devkit": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "rxjs": "^6.5.0 || ^7.5.0",
-    "marked": "^5.0.2",
+    "marked": ">=5.0.2",
     "marked-gfm-heading-id": "^3.0.4",
     "marked-highlight": "^2.0.1",
     "marked-mangle": "^1.1.7",
     "marked-shiki": "^1.1.0",
-    "mermaid": "^10.2.4",
     "prismjs": "^1.29.0",
     "shiki": "^1.6.1",
     "front-matter": "^4.0.2"
+  },
+  "peerDependenciesMeta": {
+    "shiki": {
+      "optional": true
+    },
+    "marked-shiki": {
+      "optional": true
+    },
+    "prismjs": {
+      "optional": true
+    },
+    "marked-highlight": {
+      "optional": true
+    }
   },
   "dependencies": {
     "tslib": "^2.3.0"
