--- a/packages/nx-plugin/project.json
+++ b/packages/nx-plugin/project.json
@@ -10,6 +10,7 @@
       "outputs": ["{workspaceRoot}/{options.outputPath}"],
       "options": {
         "outputPath": "node_modules/@analogjs/platform/src/lib/nx-plugin",
+        "clean": true,
         "main": "packages/nx-plugin/src/index.ts",
         "tsConfig": "packages/nx-plugin/tsconfig.lib.json",
         "assets": [
