--- a/nx.json
+++ b/nx.json
@@ -25,7 +25,7 @@
     },
     "e2e": {
       "dependsOn": ["^build"],
-      "cache": true
+      "cache": false
     },
     "serve": {
       "dependsOn": ["^build"]
