fix(content): add migration for marked-mangle dependency (#1151)

--- a/nx.json
+++ b/nx.json
@@ -25,12 +25,15 @@
     },
     "e2e": {
       "dependsOn": ["^build"],
-      "cache": true
+      "cache": false
     },
     "serve": {
       "dependsOn": ["^build"]
     },
     "build-package": {
+      "cache": false
+    },
+    "@nx/js:tsc": {
       "cache": false
     },
     "@nx/eslint:lint": {
