fix(create-analog): add legacy dependencies to older templates

--- a/nx.json
+++ b/nx.json
@@ -21,7 +21,7 @@
     },
     "test": {
       "dependsOn": ["^build"],
-      "cache": true
+      "cache": false
     },
     "e2e": {
       "dependsOn": ["^build"],
