--- a/packages/create-analog/template-angular-v17/package.json
+++ b/packages/create-analog/template-angular-v17/package.json
@@ -40,8 +40,10 @@
   "devDependencies": {
     "@analogjs/platform": "^1.5.0-beta.11",
     "@analogjs/vite-plugin-angular": "^1.5.0-beta.11",
+    "@angular-devkit/build-angular": "^17.2.0",
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
+    "@ngtools/webpack": "^17.2.0",
     "@nx/vite": "~18.0.0",
     "nx": "~18.0.0",
     "jsdom": "^22.1.0",
