--- a/packages/create-analog/template-blog/package.json
+++ b/packages/create-analog/template-blog/package.json
@@ -42,7 +42,7 @@
     "@angular/compiler-cli": "^18.0.0",
     "jsdom": "^22.1.0",
     "typescript": "~5.4.2",
-    "vite": "^5.0.0",
+    "vite": "~5.2.0",
     "vitest": "^1.3.1"
   }
 }
