--- a/packages/create-analog/template-latest/package.json
+++ b/packages/create-analog/template-latest/package.json
@@ -44,7 +44,7 @@
     "@angular/compiler-cli": "^18.0.0",
     "jsdom": "^22.0.0",
     "typescript": "~5.4.2",
-    "vite": "^5.0.0",
+    "vite": "~5.2.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^1.3.1"
   }
