feat(vite-plugin-nitro): add support for conditional server rendering at runtime

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
+    "defu": "^6.1.4",
     "destr": "^2.0.1",
     "front-matter": "^4.0.2",
     "isomorphic-fetch": "^3.0.0",
@@ -70,10 +71,11 @@
     "marked-gfm-heading-id": "^3.1.0",
     "marked-highlight": "^2.0.1",
     "mermaid": "^10.2.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "rxjs": "7.8.1",
-    "semver": "^7.6.3",
+    "radix3": "^1.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.0.0",
+    "rxjs": "7.8.0",
+    "semver": "^7.5.1",
     "superjson": "^2.2.1",
     "tslib": "^2.7.0",
     "ufo": "^1.5.4",
