--- a/packages/vite-plugin-nitro/package.json
+++ b/packages/vite-plugin-nitro/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "nitropack": "^2.10.0",
     "xmlbuilder2": "^3.0.2",
-    "esbuild": "^0.20.1"
+    "esbuild": "^0.20.1",
+    "radix3": "^1.1.1",
+    "defu": "^6.1.4"
   },
   "ng-update": {
     "packageGroup": [
