feat: setup Vitest with standalone vitest-angular package

--- a/packages/create-analog/template-angular-v16/angular.json
+++ b/packages/create-analog/template-angular-v16/angular.json
@@ -46,7 +46,7 @@
           }
         },
         "test": {
-          "builder": "@analogjs/platform:vitest"
+          "builder": "@analogjs/vitest-angular:test"
         }
       }
     }
