--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -31,7 +31,27 @@
   "peerDependencies": {
     "@nx/angular": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "@nx/devkit": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
-    "@nx/vite": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
+    "@nx/vite": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "marked": ">=5.0.2",
+    "marked-gfm-heading-id": "^3.0.4",
+    "marked-highlight": "^2.0.1",
+    "marked-mangle": "^1.1.7",
+    "marked-shiki": "^1.1.0",
+    "shiki": "^1.6.1"
+  },
+  "peerDependenciesMeta": {
+    "shiki": {
+      "optional": true
+    },
+    "marked-shiki": {
+      "optional": true
+    },
+    "prismjs": {
+      "optional": true
+    },
+    "marked-highlight": {
+      "optional": true
+    }
   },
   "builders": "./src/lib/nx-plugin/executors.json",
   "executors": "./src/lib/nx-plugin/executors.json",
