--- a/packages/create-analog/template-angular-v16/package.json
+++ b/packages/create-analog/template-angular-v16/package.json
@@ -38,7 +38,9 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "~1.1.0",
+    "@analogjs/platform": "^1.6.0-beta.7",
+    "@analogjs/vite-plugin-angular": "^1.6.0-beta.7",
+    "@analogjs/vitest-angular": "^1.6.0-beta.7",
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "^16.2.0",
     "@angular/compiler-cli": "^16.2.0",
