--- a/packages/create-analog/template-angular-v17/package.json
+++ b/packages/create-analog/template-angular-v17/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@analogjs/platform": "^1.6.0-beta.7",
     "@analogjs/vite-plugin-angular": "^1.6.0-beta.7",
+    "@analogjs/vitest-angular": "^1.6.0-beta.7",
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
