feat(router): add server context to client/server HTTP requests

--- a/packages/router/tsconfig.lib.json
+++ b/packages/router/tsconfig.lib.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
+    "types": ["node"],
     "target": "ES2022",
     "useDefineForClassFields": false,
     "paths": {
