--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -31,6 +31,8 @@
         "packages/platform/src/index.ts"
       ],
       "@analogjs/router": ["packages/router/src/index.ts"],
+      "@analogjs/router/server": ["packages/router/server/src/index.ts"],
+      "@analogjs/router/tokens": ["packages/router/tokens/src/index.ts"],
       "@analogjs/top-bar": ["libs/top-bar/src/index.ts"],
       "@analogjs/trpc": ["packages/trpc/src/index.ts"],
       "@analogjs/vite-plugin-angular": [
