docs: add german contributors file to auto update configuration

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2,7 +2,8 @@
   "files": [
     "README.md",
     "apps/docs-app/docs/contributors.mdx",
-    "apps/docs-app/i18n/es/docusaurus-plugin-content-docs/current/contributors.mdx"
+    "apps/docs-app/i18n/es/docusaurus-plugin-content-docs/current/contributors.mdx",
+    "apps/docs-app/i18n/de/docusaurus-plugin-content-docs/current/contributors.mdx"
   ],
   "imageSize": 100,
   "commit": false,
