--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "vite": "^5.3.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
+    "vitefu": "^0.2.5",
     "vitest": "1.4.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "xmlbuilder2": "^3.0.2"
