feat: use fast-glob in the plugin to get routes and endpoints

--- a/packages/platform/tsconfig.lib.json
+++ b/packages/platform/tsconfig.lib.json
@@ -8,6 +8,7 @@
     "declaration": true,
     "types": [],
     "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@analogjs/vite-plugin-angular": [
         "./node_modules/@analogjs/vite-plugin-angular"
