feat: add shared content example

--- a/libs/shared/feature/project.json
+++ b/libs/shared/feature/project.json
@@ -1,20 +1,9 @@
 {
-  "name": "shared-routes",
+  "name": "shared-feature",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/routes/src",
+  "sourceRoot": "libs/shared/feature/src",
   "prefix": "lib",
   "projectType": "library",
   "tags": [],
-  "targets": {
-    "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
-      "options": {
-        "jestConfig": "libs/shared/routes/jest.config.ts"
-      }
-    },
-    "lint": {
-      "executor": "@nx/eslint:lint"
-    }
-  }
+  "targets": {}
 }
