--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "nitropack": "^2.9.0",
     "@analogjs/vite-plugin-angular": "^1.6.4",
-    "@analogjs/vite-plugin-nitro": "^1.6.4"
+    "@analogjs/vite-plugin-nitro": "^1.6.4",
+    "vitefu": "^0.2.5"
   },
   "peerDependencies": {
     "@nx/angular": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
