--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -20,11 +20,9 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "peerDependencies": {
+    "@analogjs/content": "^1.7.0-beta.6",
     "@angular/core": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
     "@angular/router": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
-  },
-  "optionalDependencies": {
-    "@analogjs/content": "^1.7.0-beta.6"
   },
   "dependencies": {
     "tslib": "^2.0.0"
