refactor(vite-plugin-angular): inline ngtools/webpack source and remove peer dependency

--- a/packages/vite-plugin-angular/tsconfig.lib.json
+++ b/packages/vite-plugin-angular/tsconfig.lib.json
@@ -11,6 +11,7 @@
   "exclude": [
     "jest.config.ts",
     "**/*.spec.ts",
+    "**/*_spec.ts",
     "**/*.test.ts",
     "src/test-setup.ts"
   ]
