--- a/package.json
+++ b/package.json
@@ -41,23 +41,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/cdk": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/material": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/platform-server": "^18.0.0",
-    "@angular/router": "^18.0.0",
+    "@angular/animations": "18.1.3",
+    "@angular/cdk": "18.1.3",
+    "@angular/common": "18.1.3",
+    "@angular/compiler": "18.1.3",
+    "@angular/core": "18.1.3",
+    "@angular/forms": "18.1.3",
+    "@angular/material": "18.1.3",
+    "@angular/platform-browser": "18.1.3",
+    "@angular/platform-browser-dynamic": "18.1.3",
+    "@angular/platform-server": "18.1.3",
+    "@angular/router": "18.1.3",
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "3.0.1",
-    "@nx/angular": "19.2.3",
-    "@nx/devkit": "19.2.3",
+    "@nx/angular": "19.5.6",
+    "@nx/devkit": "19.5.6",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
@@ -80,31 +80,31 @@
     "zone.js": "^0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1800.0",
-    "@angular-devkit/build-angular": "^18.0.0",
-    "@angular-devkit/core": "^18.0.0",
-    "@angular-devkit/schematics": "^18.0.0",
+    "@angular-devkit/architect": "0.1801.3",
+    "@angular-devkit/build-angular": "18.1.3",
+    "@angular-devkit/core": "18.1.3",
+    "@angular-devkit/schematics": "18.1.3",
     "@angular-eslint/eslint-plugin": "18.0.1",
     "@angular-eslint/eslint-plugin-template": "18.0.1",
     "@angular-eslint/template-parser": "18.0.1",
-    "@angular/build": "^18.0.3",
-    "@angular/cli": "~18.0.0",
-    "@angular/compiler-cli": "^18.0.0",
-    "@angular/language-service": "^18.0.0",
+    "@angular/build": "18.1.3",
+    "@angular/cli": "~18.1.0",
+    "@angular/compiler-cli": "18.1.3",
+    "@angular/language-service": "18.1.3",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
     "@ngtools/webpack": "^18.0.0",
-    "@nx/cypress": "19.2.3",
-    "@nx/eslint": "19.2.3",
-    "@nx/eslint-plugin": "19.2.3",
-    "@nx/jest": "19.2.3",
-    "@nx/js": "19.2.3",
-    "@nx/plugin": "19.2.3",
-    "@nx/vite": "19.2.3",
-    "@nx/web": "19.2.3",
-    "@schematics/angular": "^18.0.0",
+    "@nx/cypress": "19.5.6",
+    "@nx/eslint": "19.5.6",
+    "@nx/eslint-plugin": "19.5.6",
+    "@nx/jest": "19.5.6",
+    "@nx/js": "19.5.6",
+    "@nx/plugin": "19.5.6",
+    "@nx/vite": "19.5.6",
+    "@nx/web": "19.5.6",
+    "@schematics/angular": "18.1.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -120,16 +120,16 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
-    "@typescript-eslint/utils": "^8.0.0-alpha.28",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/utils": "7.18.0",
     "all-contributors-cli": "^6.24.0",
     "astro": "4.8.7",
     "autoprefixer": "^10.4.19",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
-    "cypress": "13.9.0",
+    "cypress": "13.13.2",
     "esbuild": "0.19.5",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.0.0",
@@ -148,9 +148,9 @@
     "marked-mangle": "^1.1.7",
     "marked-shiki": "^1.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "^18.0.0",
+    "ng-packagr": "18.1.0",
     "nitropack": "^2.9.0",
-    "nx": "19.2.3",
+    "nx": "19.5.6",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
@@ -168,7 +168,7 @@
     "ts-jest": "29.1.0",
     "ts-morph": "^21.0.1",
     "ts-node": "10.9.1",
-    "typescript": "5.4.3",
+    "typescript": "5.5.4",
     "vite": "^5.3.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
