chore: update tsconfig.base.json

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,8 +34,14 @@
         "./node_modules/@analogjs/router",
         "packages/router/src/index.ts"
       ],
-      "@analogjs/router/server": ["packages/router/server/src/index.ts"],
-      "@analogjs/router/tokens": ["packages/router/tokens/src/index.ts"],
+      "@analogjs/router/server": [
+        "./node_modules/@analogjs/router/server",
+        "packages/router/server/src/index.ts"
+      ],
+      "@analogjs/router/tokens": [
+        "./node_modules/@analogjs/router/tokens",
+        "packages/router/tokens/src/index.ts"
+      ],
       "@analogjs/top-bar": ["libs/top-bar/src/index.ts"],
       "@analogjs/trpc": ["packages/trpc/src/index.ts"],
       "@analogjs/vite-plugin-angular": [
