fix: crossplatform remove

--- a/packages/content/project.json
+++ b/packages/content/project.json
@@ -13,7 +13,7 @@
         "commands": [
           "nx build-package content",
           "nx build content-plugin",
-          "rm node_modules/@analogjs/content/.npmignore"
+          "npx rimraf node_modules/@analogjs/content/.npmignore"
         ],
         "parallel": false
       },
