fix(vite-plugin-nitro): support server middleware in development

--- a/packages/create-analog/template-blog/tsconfig.app.json
+++ b/packages/create-analog/template-blog/tsconfig.app.json
@@ -8,7 +8,7 @@
   "files": ["src/main.ts", "src/main.server.ts"],
   "include": [
     "src/**/*.d.ts",
-    "src/app/routes/**/*.ts",
-    "src/app/pages/**/*.page.ts"
+    "src/app/pages/**/*.page.ts",
+    "src/server/middleware/**/*.ts"
   ]
 }
