--- a/packages/astro-angular/package.json
+++ b/packages/astro-angular/package.json
@@ -27,6 +27,10 @@
     "type": "git",
     "url": "https://github.com/analogjs/analog.git"
   },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/brandonroberts"
+  },
   "dependencies": {
     "@analogjs/vite-plugin-angular": "^1.7.3-beta.1"
   },
