--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -23,6 +23,10 @@
     "type": "git",
     "url": "https://github.com/analogjs/analog.git"
   },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/brandonroberts"
+  },
   "dependencies": {
     "nitropack": "^2.9.0",
     "@analogjs/vite-plugin-angular": "^1.7.3-beta.1",
