--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -19,6 +19,10 @@
     "type": "git",
     "url": "https://github.com/analogjs/analog.git"
   },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/brandonroberts"
+  },
   "peerDependencies": {
     "@analogjs/content": "^1.7.3-beta.1",
     "@angular/core": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
