--- a/packages/vitest-angular/package.json
+++ b/packages/vitest-angular/package.json
@@ -23,6 +23,10 @@
     "type": "git",
     "url": "https://github.com/analogjs/analog.git"
   },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/brandonroberts"
+  },
   "builders": "./builders.json",
   "ng-add": {
     "save": "devDependencies"
