--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -14,6 +14,7 @@
     "template-angular-v17",
     "template-blog",
     "template-latest",
+    "template-minimal",
     "files"
   ],
   "main": "index.js",
