fix(vite-plugin-angular): remove @ngtools/webpack and make @angular-devkit/build-angular optional

--- a/packages/create-analog/template-blog/package.json
+++ b/packages/create-analog/template-blog/package.json
@@ -18,6 +18,7 @@
     "@analogjs/content": "^1.7.3-beta.6",
     "@analogjs/router": "^1.7.3-beta.6",
     "@angular/animations": "^18.0.0",
+    "@angular/build": "^18.0.0",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
@@ -38,7 +39,6 @@
     "@analogjs/platform": "^1.7.3-beta.6",
     "@analogjs/vite-plugin-angular": "^1.7.3-beta.6",
     "@analogjs/vitest-angular": "^1.7.3-beta.6",
-    "@angular-devkit/build-angular": "^18.0.0",
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
     "jsdom": "^22.1.0",
