--- a/packages/create-analog/template-latest/package.json
+++ b/packages/create-analog/template-latest/package.json
@@ -18,6 +18,7 @@
     "@analogjs/content": "^1.7.3-beta.6",
     "@analogjs/router": "^1.7.3-beta.6",
     "@angular/animations": "^18.0.0",
+    "@angular/build": "^18.0.0",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
@@ -40,7 +41,6 @@
     "@analogjs/platform": "^1.7.3-beta.6",
     "@analogjs/vite-plugin-angular": "^1.7.3-beta.6",
     "@analogjs/vitest-angular": "^1.7.3-beta.6",
-    "@angular-devkit/build-angular": "^18.0.0",
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
     "jsdom": "^22.0.0",
