--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -25,7 +25,15 @@
   },
   "peerDependencies": {
     "@angular-devkit/build-angular": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
-    "@ngtools/webpack": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
+    "@angular/build": "^18.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@angular-devkit/build-angular": {
+      "optional": true
+    },
+    "@angular/build": {
+      "optional": true
+    }
   },
   "dependencies": {
     "ts-morph": "^21.0.0"
