--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "ts-morph": "^21.0.1",
     "ts-node": "10.9.1",
     "typescript": "5.4.3",
+    "vfile": "^6.0.3",
     "vite": "^5.3.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
