chore: update to Nx 19.5.3 and Angular 18.2.x

--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "build:test": "nx build ng-app --skip-nx-cache"
   },
   "engines": {
-    "node": "^18.13.0 || ^20.0.0",
+    "node": "^18.13.0 || ^20.0.0 || ^22.0.0",
     "pnpm": "^9.0.0"
   },
-  "packageManager": "pnpm@9.3.0",
+  "packageManager": "pnpm@9.10.0",
   "keywords": [
     "vite-plugin",
     "angular",
@@ -41,23 +41,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/cdk": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/material": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/platform-server": "^18.0.0",
-    "@angular/router": "^18.0.0",
+    "@angular/animations": "^18.2.4",
+    "@angular/cdk": "^18.2.4",
+    "@angular/common": "^18.2.4",
+    "@angular/compiler": "^18.2.4",
+    "@angular/core": "^18.2.4",
+    "@angular/forms": "^18.2.4",
+    "@angular/material": "^18.2.4",
+    "@angular/platform-browser": "^18.2.4",
+    "@angular/platform-browser-dynamic": "^18.2.4",
+    "@angular/platform-server": "^18.2.4",
+    "@angular/router": "^18.2.4",
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "3.0.1",
-    "@nx/angular": "19.2.3",
-    "@nx/devkit": "19.2.3",
+    "@nx/angular": "19.5.3",
+    "@nx/devkit": "19.5.3",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
@@ -68,42 +68,42 @@
     "marked-gfm-heading-id": "^3.1.0",
     "marked-highlight": "^2.0.1",
     "mermaid": "^10.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.0.0",
-    "rxjs": "7.8.0",
-    "semver": "^7.5.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "rxjs": "7.8.1",
+    "semver": "^7.6.3",
     "superjson": "^2.2.1",
-    "tslib": "^2.4.0",
-    "ufo": "^1.1.2",
+    "tslib": "^2.7.0",
+    "ufo": "^1.5.4",
     "xhr2": "^0.2.1",
-    "zod": "^3.21.4",
-    "zone.js": "^0.14.8"
+    "zod": "^3.23.8",
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1800.0",
-    "@angular-devkit/build-angular": "^18.0.0",
-    "@angular-devkit/core": "^18.0.0",
-    "@angular-devkit/schematics": "^18.0.0",
-    "@angular-eslint/eslint-plugin": "18.0.1",
-    "@angular-eslint/eslint-plugin-template": "18.0.1",
-    "@angular-eslint/template-parser": "18.0.1",
-    "@angular/build": "^18.0.3",
-    "@angular/cli": "~18.0.0",
-    "@angular/compiler-cli": "^18.0.0",
-    "@angular/language-service": "^18.0.0",
+    "@angular-devkit/architect": "^0.1802.4",
+    "@angular-devkit/build-angular": "^18.2.4",
+    "@angular-devkit/core": "^18.2.4",
+    "@angular-devkit/schematics": "^18.2.4",
+    "@angular-eslint/eslint-plugin": "18.3.1",
+    "@angular-eslint/eslint-plugin-template": "18.3.1",
+    "@angular-eslint/template-parser": "18.3.1",
+    "@angular/build": "^18.2.4",
+    "@angular/cli": "~18.2.4",
+    "@angular/compiler-cli": "^18.2.4",
+    "@angular/language-service": "^18.2.4",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
-    "@nx/cypress": "19.2.3",
-    "@nx/eslint": "19.2.3",
-    "@nx/eslint-plugin": "19.2.3",
-    "@nx/jest": "19.2.3",
-    "@nx/js": "19.2.3",
-    "@nx/plugin": "19.2.3",
-    "@nx/vite": "19.2.3",
-    "@nx/web": "19.2.3",
-    "@schematics/angular": "^18.0.0",
+    "@nx/cypress": "19.5.3",
+    "@nx/eslint": "19.5.3",
+    "@nx/eslint-plugin": "19.5.3",
+    "@nx/jest": "19.5.3",
+    "@nx/js": "19.5.3",
+    "@nx/plugin": "19.5.3",
+    "@nx/vite": "19.5.3",
+    "@nx/web": "19.5.3",
+    "@schematics/angular": "^18.2.4",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -128,11 +128,11 @@
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
-    "cypress": "13.9.0",
+    "cypress": "13.14.2",
     "esbuild": "0.19.5",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-cypress": "2.14.0",
+    "eslint-plugin-cypress": "3.5.0",
     "execa": "^7.1.1",
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.1.1",
@@ -147,9 +147,9 @@
     "marked-mangle": "^1.1.7",
     "marked-shiki": "^1.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "^18.0.0",
-    "nitropack": "^2.9.0",
-    "nx": "19.2.3",
+    "ng-packagr": "^18.2.1",
+    "nitropack": "^2.9.7",
+    "nx": "19.5.3",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
