fix(vite-plugin-angular): add vfile dependency

--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -36,7 +36,8 @@
     }
   },
   "dependencies": {
-    "ts-morph": "^21.0.0"
+    "ts-morph": "^21.0.0",
+    "vfile": "^6.0.3"
   },
   "ng-update": {
     "packageGroup": [
