--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -29,6 +29,10 @@
     "@angular/router": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
     "@nx/devkit": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0 || ^20.0.0",
     "front-matter": "^4.0.2",
+    "marked": ">=5.0.2",
+    "marked-gfm-heading-id": "^3.0.4",
+    "marked-highlight": "^2.0.1",
+    "marked-mangle": "^1.1.7",
     "rxjs": "^6.5.0 || ^7.5.0",
     "prismjs": "^1.29.0",
     "satori": "^0.10.14",
