--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.4",
-    "@angular/cdk": "^18.2.4",
-    "@angular/common": "^18.2.4",
-    "@angular/compiler": "^18.2.4",
-    "@angular/core": "^18.2.4",
-    "@angular/forms": "^18.2.4",
-    "@angular/material": "^18.2.4",
-    "@angular/platform-browser": "^18.2.4",
-    "@angular/platform-browser-dynamic": "^18.2.4",
-    "@angular/platform-server": "^18.2.4",
-    "@angular/router": "^18.2.4",
+    "@angular/animations": "^19.0.0-rc.0",
+    "@angular/cdk": "^19.0.0-rc.0",
+    "@angular/common": "^19.0.0-rc.0",
+    "@angular/compiler": "^19.0.0-rc.0",
+    "@angular/core": "^19.0.0-rc.0",
+    "@angular/forms": "^19.0.0-rc.0",
+    "@angular/material": "^19.0.0-rc.0",
+    "@angular/platform-browser": "^19.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^19.0.0-rc.0",
+    "@angular/platform-server": "^19.0.0-rc.0",
+    "@angular/router": "^19.0.0-rc.0",
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
@@ -77,20 +77,20 @@
     "ufo": "^1.5.4",
     "xhr2": "^0.2.1",
     "zod": "^3.23.8",
-    "zone.js": "^0.14.10"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1802.4",
-    "@angular-devkit/build-angular": "^18.2.4",
-    "@angular-devkit/core": "^18.2.4",
-    "@angular-devkit/schematics": "^18.2.4",
+    "@angular-devkit/architect": "^0.1900.0-rc.0",
+    "@angular-devkit/build-angular": "^19.0.0-rc.0",
+    "@angular-devkit/core": "^19.0.0-rc.0",
+    "@angular-devkit/schematics": "^19.0.0-rc.0",
     "@angular-eslint/eslint-plugin": "18.3.1",
     "@angular-eslint/eslint-plugin-template": "18.3.1",
     "@angular-eslint/template-parser": "18.3.1",
-    "@angular/build": "^18.2.4",
-    "@angular/cli": "~18.2.4",
-    "@angular/compiler-cli": "^18.2.4",
-    "@angular/language-service": "^18.2.4",
+    "@angular/build": "^19.0.0-rc.0",
+    "@angular/cli": "^19.0.0-rc.0",
+    "@angular/compiler-cli": "^19.0.0-rc.0",
+    "@angular/language-service": "^19.0.0-rc.0",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
@@ -103,7 +103,7 @@
     "@nx/plugin": "19.5.3",
     "@nx/vite": "19.5.3",
     "@nx/web": "19.5.3",
-    "@schematics/angular": "^18.2.4",
+    "@schematics/angular": "^19.0.0-rc.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -147,7 +147,7 @@
     "marked-mangle": "^1.1.7",
     "marked-shiki": "^1.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "^18.2.1",
+    "ng-packagr": "^19.0.0-rc.0",
     "nitropack": "^2.9.7",
     "nx": "19.5.3",
     "playwright": "^1.30.0",
@@ -171,7 +171,7 @@
     "ts-jest": "29.1.0",
     "ts-morph": "^21.0.1",
     "ts-node": "10.9.1",
-    "typescript": "5.4.3",
+    "typescript": "~5.5.0",
     "vfile": "^6.0.3",
     "vite": "^5.3.0",
     "vite-plugin-eslint": "^1.8.1",
