--- a/packages/vitest-angular/package.json
+++ b/packages/vitest-angular/package.json
@@ -33,7 +33,7 @@
   },
   "peerDependencies": {
     "@analogjs/vite-plugin-angular": "*",
-    "@angular-devkit/architect": "^0.1500.0 || ^0.1600.0 || ^0.1700.0 || ^0.1800.0",
+    "@angular-devkit/architect": "^0.1500.0 || ^0.1600.0 || ^0.1700.0 || ^0.1800.0 || ^0.1900.0-rc.0",
     "vitest": "^1.3.1 || ^2.0.0"
   },
   "ng-update": {
