--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "3.0.1",
-    "@nx/angular": "19.5.3",
-    "@nx/devkit": "19.5.3",
+    "@nx/angular": "20.0.8",
+    "@nx/devkit": "20.0.8",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
@@ -95,14 +95,14 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
-    "@nx/cypress": "19.5.3",
-    "@nx/eslint": "19.5.3",
-    "@nx/eslint-plugin": "19.5.3",
-    "@nx/jest": "19.5.3",
-    "@nx/js": "19.5.3",
-    "@nx/plugin": "19.5.3",
-    "@nx/vite": "19.5.3",
-    "@nx/web": "19.5.3",
+    "@nx/cypress": "20.0.8",
+    "@nx/eslint": "20.0.8",
+    "@nx/eslint-plugin": "20.0.8",
+    "@nx/jest": "20.0.8",
+    "@nx/js": "20.0.8",
+    "@nx/plugin": "20.0.8",
+    "@nx/vite": "20.0.8",
+    "@nx/web": "20.0.8",
     "@schematics/angular": "^19.0.0-rc.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
@@ -113,7 +113,7 @@
     "@swc/helpers": "0.5.11",
     "@types/babel__core": "^7.20.0",
     "@types/hast": "^3.0.3",
-    "@types/jest": "29.4.4",
+    "@types/jest": "29.5.14",
     "@types/marked": "^5.0.0",
     "@types/node": "18.19.15",
     "@types/prismjs": "^1.26.0",
@@ -138,8 +138,8 @@
     "fs-extra": "^11.1.1",
     "h3": "^1.8.2",
     "happy-dom": "^12.10.3",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "kolorist": "^1.6.0",
@@ -149,7 +149,7 @@
     "minimist": "^1.2.7",
     "ng-packagr": "^19.0.0-rc.0",
     "nitropack": "^2.9.7",
-    "nx": "19.5.3",
+    "nx": "20.0.8",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
