--- a/packages/vitest-angular/tsconfig.json
+++ b/packages/vitest-angular/tsconfig.json
@@ -7,7 +7,10 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "sourceMap": false,
+    "inlineSourceMap": true,
+    "inlineSources": true
   },
   "files": [],
   "include": [],
