--- a/packages/vitest-angular/tsconfig.json
+++ b/packages/vitest-angular/tsconfig.json
@@ -10,7 +10,8 @@
     "noFallthroughCasesInSwitch": true,
     "sourceMap": false,
     "inlineSourceMap": true,
-    "inlineSources": true
+    "inlineSources": true,
+    "resolveJsonModule": true
   },
   "files": [],
   "include": [],
