--- a/libs/card/tsconfig.spec.json
+++ b/libs/card/tsconfig.spec.json
@@ -2,8 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["node", "vitest/globals"],
-    "target": "es2016"
+    "types": ["node", "vitest/globals"]
   },
   "files": ["src/test-setup.ts"],
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
