fix(vite-plugin-angular): improve support for Angular Material and harness testing

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -64,7 +64,7 @@
       "executor": "@nx/eslint:lint"
     },
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@analogjs/vitest-angular:test",
       "outputs": ["{projectRoot}/coverage"]
     }
   }
