fix: build vitest-angular before running app tests

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -4,6 +4,7 @@
   "projectType": "application",
   "sourceRoot": "apps/analog-app/src",
   "prefix": "analogjs",
+  "implicitDependencies": ["vitest-angular"],
   "tags": [],
   "targets": {
     "build": {
