build: update to Angular v19

--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0-rc.0",
-    "@angular/cdk": "^19.0.0-rc.0",
-    "@angular/common": "^19.0.0-rc.0",
-    "@angular/compiler": "^19.0.0-rc.0",
-    "@angular/core": "^19.0.0-rc.0",
-    "@angular/forms": "^19.0.0-rc.0",
-    "@angular/material": "^19.0.0-rc.0",
-    "@angular/platform-browser": "^19.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^19.0.0-rc.0",
-    "@angular/platform-server": "^19.0.0-rc.0",
-    "@angular/router": "^19.0.0-rc.0",
+    "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/material": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/platform-server": "^19.0.0",
+    "@angular/router": "^19.0.0",
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
@@ -80,17 +80,17 @@
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1900.0-rc.0",
-    "@angular-devkit/build-angular": "^19.0.0-rc.0",
-    "@angular-devkit/core": "^19.0.0-rc.0",
-    "@angular-devkit/schematics": "^19.0.0-rc.0",
+    "@angular-devkit/architect": "^0.1900.0",
+    "@angular-devkit/build-angular": "^19.0.0",
+    "@angular-devkit/core": "^19.0.0",
+    "@angular-devkit/schematics": "^19.0.0",
     "@angular-eslint/eslint-plugin": "18.3.1",
     "@angular-eslint/eslint-plugin-template": "18.3.1",
     "@angular-eslint/template-parser": "18.3.1",
-    "@angular/build": "^19.0.0-rc.0",
-    "@angular/cli": "^19.0.0-rc.0",
-    "@angular/compiler-cli": "^19.0.0-rc.0",
-    "@angular/language-service": "^19.0.0-rc.0",
+    "@angular/build": "^19.0.0",
+    "@angular/cli": "^19.0.0",
+    "@angular/compiler-cli": "^19.0.0",
+    "@angular/language-service": "^19.0.0",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
@@ -103,7 +103,7 @@
     "@nx/plugin": "20.0.8",
     "@nx/vite": "20.0.8",
     "@nx/web": "20.0.8",
-    "@schematics/angular": "^19.0.0-rc.0",
+    "@schematics/angular": "^19.0.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -147,7 +147,7 @@
     "marked-mangle": "^1.1.7",
     "marked-shiki": "^1.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "^19.0.0-rc.0",
+    "ng-packagr": "^19.0.0",
     "nitropack": "^2.9.7",
     "nx": "20.0.8",
     "playwright": "^1.30.0",
@@ -173,11 +173,11 @@
     "ts-node": "10.9.1",
     "typescript": "~5.5.0",
     "vfile": "^6.0.3",
-    "vite": "^5.3.0",
+    "vite": "^5.4.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
     "vitefu": "^0.2.5",
-    "vitest": "1.4.0",
+    "vitest": "^2.0.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "xmlbuilder2": "^3.0.2"
   }
