feat(create-analog): update template for latest to Angular v19

--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -12,6 +12,7 @@
     "index.js",
     "template-angular-v16",
     "template-angular-v17",
+    "template-angular-v18",
     "template-blog",
     "template-latest",
     "template-minimal",
