--- a/packages/create-analog/template-blog/package.json
+++ b/packages/create-analog/template-blog/package.json
@@ -1,49 +1,51 @@
 {
-  "name": "blog",
+  "name": "my-app",
   "version": "0.0.0",
   "type": "module",
-  "private": true,
   "engines": {
-    "node": ">=18.13.0"
+    "node": ">=18.19.1"
   },
   "scripts": {
-    "dev": "ng serve",
     "ng": "ng",
+    "dev": "ng serve",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "private": true,
   "dependencies": {
     "@analogjs/content": "^1.9.5-beta.1",
     "@analogjs/router": "^1.9.5-beta.1",
-    "@angular/animations": "^18.0.0",
-    "@angular/build": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/platform-server": "^18.0.0",
-    "@angular/router": "^18.0.0",
+    "@angular/animations": "^19.0.0",
+    "@angular/build": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/platform-server": "^19.0.0",
+    "@angular/router": "^19.0.0",
     "front-matter": "^4.0.2",
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.1.0",
+    "marked-highlight": "^2.0.1",
     "marked-mangle": "^1.1.7",
-    "rxjs": "~7.5.6",
-    "tslib": "^2.4.0",
-    "zone.js": "~0.14.0"
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@analogjs/platform": "^1.9.5-beta.1",
     "@analogjs/vite-plugin-angular": "^1.9.5-beta.1",
     "@analogjs/vitest-angular": "^1.9.5-beta.1",
-    "@angular/cli": "^18.0.0",
-    "@angular/compiler-cli": "^18.0.0",
-    "jsdom": "^22.1.0",
-    "typescript": "~5.4.2",
+    "@angular/cli": "^19.0.0",
+    "@angular/compiler-cli": "^19.0.0",
+    "jsdom": "^22.0.0",
+    "typescript": "~5.5.0",
     "vite": "^5.0.0",
-    "vitest": "^1.3.1"
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^2.0.0"
   }
 }
