--- a/packages/create-analog/template-minimal/tsconfig.json
+++ b/packages/create-analog/template-minimal/tsconfig.json
@@ -15,6 +15,7 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "isolatedModules": true,
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
