feat(vitest-angular): introduce application bundle-based Vitest builder (#1443)

--- a/libs/card/tsconfig.lib.json
+++ b/libs/card/tsconfig.lib.json
@@ -5,7 +5,10 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "moduleResolution": "bundler"
   },
   "exclude": ["src/**/*.spec.ts", "vite.config.ts"],
   "include": ["src/**/*.ts"]
