--- a/packages/nx-plugin/project.json
+++ b/packages/nx-plugin/project.json
@@ -12,6 +12,7 @@
         "outputPath": "node_modules/@analogjs/platform/src/lib/nx-plugin",
         "main": "packages/nx-plugin/src/index.ts",
         "tsConfig": "packages/nx-plugin/tsconfig.lib.json",
+        "clean": true,
         "assets": [
           "packages/nx-plugin/*.md",
           {
