build: partially re-enable Nx cache (#1478)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nx serve",
     "build": "nx run-many --target build --all --parallel=1",
     "e2e": "nx run-many --target e2e --projects create-analog-e2e,analog-app-e2e-cypress --parallel=1 --exclude analog-app-e2e-playwright",
-    "test": "nx run-many --target test --all",
+    "test": "nx run-many --target test",
     "build:vite-ci": "npm run build",
     "test:vite-ci": "nx run-many --target test --all",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
