chore: update release test workflows [skip ci]

--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -1,6 +1,24 @@
 name: Release Test
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      angular_build_tag:
+        description: 'Angular Build Tag'
+        required: true
+        default: 'latest'
+        type: choice
+        options:
+          - latest
+          - next
+      nx_build_tag:
+        description: 'Nx Build Tag'
+        required: true
+        default: 'latest'
+        type: choice
+        options:
+          - latest
+          - canary
 
 jobs:
   create-analog:
@@ -14,46 +32,51 @@ jobs:
           TAG="$(${{ github.ref_name == 'main' }} && echo 'latest' || echo '${{ github.ref_name }}')"
       - name: Create Analog Application
         run: npm create analog@$TAG analog-app -- --skipTailwind --analogSFC=false --template latest
-      - name: Build and Test
+      - name: Build, Test, and Validate
         run: |
           cd analog-app
           npm install
           npm run build
           npm run test
-      - name: Verify
-        run: cat dist/analog/public/index.html
+          cat ./dist/analog/public/index.html
 
-  # create-nx-workspace:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/setup-node@v3
-  #     - run: corepack enable
-  #     - run: npm --version
-  #     - name: Create Nx Workspace
-  #       run: |
-  #         npx create-nx-workspace@latest analog-nx-workspace --preset analog@beta --analogAppName my-analog-app --ci skip
-  #     - name: Build App
-  #       run: |
-  #         cd analog-nx-workspace
-  #         npx nx build my-analog-app
-  #     - name: Run Tests
-  #       run: npx nx test my-analog-app
-  #     - name: Verify
-  #       run: cat dist/apps/my-analog-app/analog/public/index.html
+  create-nx-workspace:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-node@v3
+      - run: corepack enable
+      - run: npm --version
+      - name: Set Release Tag
+        run: |
+          TAG="$(${{ github.ref_name == 'main' }} && echo 'latest' || echo '${{ github.ref_name }}')"
+      - name: Create Nx Workspace
+        run: |
+          npx create-nx-workspace@{{ inputs.nx_build_tag }} analog-nx-workspace --preset analog@$TAG --analogAppName my-analog-app --ci skip
+      - name: Build, Test, and Validate
+        run: |
+          cd analog-nx-workspace
+          npm install
+          npx nx build my-analog-app
+          npx nx test my-analog-app
+          cat ./dist/apps/my-analog-app/analog/public/index.html
 
-  # migrate-angular-app:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/setup-node@v3
-  #     - run: corepack enable
-  #     - run: npm --version
-  #     - name: Create Angular App
-  #       run: |
-  #         npx @angular/cli@latest my-angular-app --style css --no-ssr
-  #     - name: Build App
-  #       run: cd analog-nx-workspace
-  #       run: npx nx build my-analog-app
-  #     - name: Run Tests App
-  #       run: npx nx test my-analog-app
-  #     - name: Verify
-  #       run: cat dist/apps/my-analog-app/public/index.html
+  migrate-angular-app:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-node@v3
+      - run: corepack enable
+      - run: npm --version
+      - name: Set Release Tag
+        run: |
+          TAG="$(${{ github.ref_name == 'main' }} && echo 'latest' || echo '${{ github.ref_name }}')"
+      - name: Create Angular App
+        run: |
+          npx @angular/cli@{{ inputs.angular_build_tag }} new my-angular-app --style css --no-ssr
+      - name: Migrate, Build, Test, and Validate
+        run: |
+          cd my-angular-app
+          npm install @analogjs/platform@$TAG --save-dev
+          npx ng g @analogjs/platform:init --project my-angular-app
+          npm run build
+          npm run test
+          cat ./dist/analog/public/index.html
